# QG-Server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: HttpDate.md  HttpServer.md  problem.md
src/: CMakeLists.txt
src/base/: thread_pool.cpp  thread_pool.h  timer.cpp  timer.h  timer_heap.cpp  timer_heap.h  timer_queue.cpp  timer_queue.h
src/core/: HttpData.cc  HttpData.h  HttpParser.cc  HttpParser.h  Server.cpp  Server.h  accept_handler_inherit.cpp  accept_handler_inherit.h  accepter.cpp  accepter.h  event_handler.cpp  event_handler.h  event_handler_inherit.cpp  event_handler_inherit.h  event_loop.cpp  event_loop.h  http_data.cc  http_data.h  http_handler.cpp  http_handler.h  http_parser.cc  http_parser.h  loop_thread.cpp  loop_thread.h  loop_thread_pool.cpp  loop_thread_pool.h  main.cpp  reactor.cpp  reactor.h  request_handler_inherit.h  server.cpp  server.h  socket.cpp  socket.h  sync_event_demultiplexer.cpp  sync_event_demultiplexer.h  tcp_connection.cpp  tcp_connection.h  timer.cpp  timer.h  (+6 more)
src/core/http/: accept_handler_inherit.cpp  error.cpp  error.h  http_context.cpp  http_context.h  http_data.h  http_handler.cpp  http_handler.h  http_parser.cc  http_parser.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_server.cpp  http_server.h  request_handler_inherit.cpp  router.cpp  router.h
src/core/http/test/: test_http_server.cpp  test_parser.cpp
src/core/poll/: KqueuePoller.cpp  KqueuePoller.h  Poller.h  Pollpoller.cpp  Pollpoller.h  sync_event_demultiplexer.cpp  sync_event_demultiplexer.h
src/test/: A.cpp  test_http_paser.cc  test_kqueue.cc  test_pipe.cpp  test_server.cpp  test_timer_heap.cc  test_timer_in_loop.cpp  test_virtual_deconstruct.cpp  test_wake_up.cpp  test_weak_ptr.cpp
src/util/: atomic.h  block_queue.h  config.h  copyable.h  log.h  nettool.h  noncopyable.h  rwtool.h  time_stamp.cpp  time_stamp.h  type.h
